src/tests/testfiles/variable-declarations/2.txt
Error at 3:7: Identifier a already taken by variable
int a;
    ^
